--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           Our mission is to uplift each member, strengthen our local economy, and build lasting relationships based on trust and integrity.
         </p>
         <div class="mt-6 text-right">
-          <p class="font-semibold">— John Mwangi, Chairman</p>
+          <p class="font-semibold">— John Chacha, Chairman</p>
         </div>
       </div>
     </div>
@@ -74,17 +74,17 @@
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
         <div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-lg text-center transform transition hover:-translate-y-2 duration-300">
           <img src="https://placehold.co/200x200?text=John+Mwangi" alt="Chairman" class="w-24 h-24 mx-auto rounded-full mb-4 border-2 border-purple-500">
-          <h3 class="text-xl font-semibold">John Mwangi</h3>
+          <h3 class="text-xl font-semibold">John Chacha</h3>
           <p class="text-gray-600 dark:text-gray-400">Chairman</p>
         </div>
         <div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-lg text-center transform transition hover:-translate-y-2 duration-300">
           <img src=" https://placehold.co/200x200?text=Alice+Wanjiru" alt="Secretary" class="w-24 h-24 mx-auto rounded-full mb-4 border-2 border-purple-500">
-          <h3 class="text-xl font-semibold">Alice Wanjiru</h3>
+          <h3 class="text-xl font-semibold">Charles Mosabi</h3>
           <p class="text-gray-600 dark:text-gray-400">Secretary</p>
         </div>
         <div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-lg text-center transform transition hover:-translate-y-2 duration-300">
           <img src=" https://placehold.co/200x200?text=Peter+Njoroge" alt="Treasurer" class="w-24 h-24 mx-auto rounded-full mb-4 border-2 border-purple-500">
-          <h3 class="text-xl font-semibold">Peter Njoroge</h3>
+          <h3 class="text-xl font-semibold">Peter Seria</h3>
           <p class="text-gray-600 dark:text-gray-400">Treasurer</p>
         </div>
       </div>
