--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Umumbiri Welfare SHG</title>
+  <title>Umumburio Welfare SHG</title>
 
   <!-- Google Fonts: Poppins -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
@@ -44,7 +44,7 @@
   <section class="bg-gradient-to-br from-purple-600 to-pink-500 text-white py-20">
     <div class="container mx-auto px-6 text-center">
       <h2 class="text-4xl md:text-5xl font-extrabold mb-4">Empowering Communities Together</h2>
-      <p class="text-lg md:text-xl max-w-2xl mx-auto mb-8">Umumbiri Welfare SHG is committed to fostering financial inclusion, community growth, and mutual support through collaborative efforts.</p>
+      <p class="text-lg md:text-xl max-w-2xl mx-auto mb-8">Umumburio Welfare SHG is committed to fostering financial inclusion, community growth, and mutual support through collaborative efforts.</p>
       <a href="banking.html" class="inline-block px-8 py-3 bg-white text-purple-700 font-semibold rounded-full hover:bg-gray-100 transition-transform transform hover:scale-105">
         Join Meeting
       </a>
@@ -198,7 +198,7 @@
   <!-- Footer -->
   <footer class="bg-gray-800 text-white py-8">
     <div class="container mx-auto px-6 text-center">
-      <p>&copy; 2025 Umumbiri Welfare SHG. All rights reserved.</p>
+      <p>&copy; 2025 Umumburio Welfare SHG. All rights reserved.</p>
       <div class="mt-4 flex justify-center space-x-4 text-lg">
         <a href="#" class="text-blue-400 hover:text-blue-300">Facebook</a>
         <a href="#" class="text-blue-400 hover:text-blue-300">Twitter</a>
